--- a/topseat/templates/topseat/home.html
+++ b/topseat/templates/topseat/home.html
@@ -23,20 +23,21 @@
             <b>Se parte de la comunidad</b></br></br>
             Registrate y conoce conductores que se dirigen cerca a tu dirección. Tambien, puedes ser parte de las personas que prestan el servicio.
         </p>
-
+    </div>
+    <div class="img_right">
         <p><img src='{% static "img/car.png" %}'>
-            <b></br></br></br></br></br></br></br>Escoja un viaje compartido</b></br></br>
+            <b></br></br>Escoja un viaje compartido</b></br></br>
             Seleccione un viaje que se adapte a su horario. Viaje o maneje para satisfacer sus necesidades diarias o las de otras personas.
         </p>
-
+    </div>
+    <div class="info_body2">
         <p><img src='{% static "img/road-trip.png" %}'>
-            <b></br></br></br></br></br></br></br>Disfrute del viaje</b></br></br>
+            <b></br></br></br>Disfrute del viaje</b></br></br>
             Conozca gente nueva y aproveche al máximo su tiempo.
         </p>
     </div>
-
-    <div class="info" style="height: 1%;">
-    </div>
+</div>
+<div class="info" style="height: 1%;">
 </div>
 
 {%endblock content%}
