Eventos Casi Final

--- a/topseat/templates/Eventos/home.html
+++ b/topseat/templates/Eventos/home.html
@@ -33,7 +33,7 @@ for (i = 0; i < close.length; i++) {
   </tr>
   {%for item in Q%}
    <tr>
-    <td>{{item.cliente.usuario.first_name}} {{item.cliente.usuario.last_name}}</td> 
+    <td>{{item.clienteAfectado.usuario.first_name}} {{item.clienteAfectado.usuario.last_name}}</td> 
     <td>{{item.viaje}}</td>
 	<td>{{item.descripcion}}</td>
 	<td style="text-align:center;">
