--- a/topseat/static/css/style.css
+++ b/topseat/static/css/style.css
@@ -137,6 +137,10 @@ nav a:hover::before {
  }
  select:focus{ outline: none;}
 
+ small { 
+    font-size: 10px;
+  }
+
  .log_in {
      position: absolute;
      top: 50%;
@@ -160,16 +164,21 @@ nav a:hover::before {
  }
 
  .sign_up {
+     
      position: absolute;
-     top: 50%;
+     top: 100%;
      left: 50%;
      font-size: 15px;
      transform: translate(-50%, -50%);
      width: 480px;
-     height: 800px;
+     height: 1070px;
      box-sizing: border-box;
      background: rgba(255, 255, 255, 1);
      border-radius: 12px 12px 12px 12px;
+
+     margin-bottom: 40px;
+     padding-bottom: 113px;
+     padding-right: 85px;
  }
 
  .sign_up a {
@@ -184,7 +193,7 @@ nav a:hover::before {
  .image_container {
     position: absolute;
     display: inline-block;
-    background-image: url('{{ STATIC_URL }}img/image2.jpg');
+    background-image: url('/static/img/image2.jpg');
     background-position: center;
     background-repeat: no-repeat;
     width:100%;
@@ -417,7 +426,7 @@ nav a:hover::before {
    padding-left: 25%;
  }
 
-@media screen and (max-width: 350px) {
+ @media screen and (max-width: 350px) {
     nav li {
         display: inline-block;
         margin-left: 6%;
@@ -457,24 +466,31 @@ nav a:hover::before {
     }
 
     .sign_up {
-      margin-bottom: 69px;
-      top: 125%;
+      margin-bottom: 40px;
+      top: 120%;
       left: 50%;
-      width: 80%;
-      height: 1200px;
-      padding-bottom: 115px;
+      width: 90%;
+      height: 1160px;
+      padding-bottom: 113px;
+      padding-right: 40px;
     }
 
     select {
         width:100%;
     }
 
-    .c1 p{
-        margin-left: 15%;
-    }
 
      input[type=submit] {
        margin-left: 25%;
+     }
+
+     form.site-form {
+        padding-left: 10%;
+     }
+
+     .buttons {
+        left: 35%;
+        top: 90%;
      }
 
     .image_container {
@@ -579,24 +595,30 @@ nav a:hover::before {
     }
 
     .sign_up {
-      top: 120%;
-      left: 50%;
-      width: 80%;
-      height: 1130px;
-      margin-bottom: 70px;
-      padding-bottom: 60%;
+        margin-bottom: 40px;
+        top: 120%;
+        left: 50%;
+        width: 90%;
+        height: 1160px;
+        padding-bottom: 113px;
+        padding-right: 40px;
     }
 
     select {
         width:100%;
     }
 
-    .c1 p{
-        margin-left: 20%;
-    }
-
      input[type=submit] {
        margin-left: 30%;
+     }
+
+     form.site-form {
+        padding-left: 13%;
+     }
+
+     .buttons {
+        left: 35%;
+        top: 85%;
      }
 
     .image_container {
@@ -704,23 +726,30 @@ nav a:hover::before {
     }
 
     .sign_up {
-      top: 110%;
-      margin-bottom: 70px;
-      left: 50%;
-      width: 80%;
-      height: 950px;
+        margin-bottom: 40px;
+        top: 110%;
+        left: 50%;
+        width: 90%;
+        height: 1100px;
+        padding-bottom: 113px;
+        padding-right: 80px;
     }
 
     select {
         width:100%;
     }
 
-    .c1 p{
-        margin-left: 27%;
-    }
-
      input[type=submit] {
-       margin-left: 35%;
+       margin-left: 25%;
+     }
+
+     form.site-form {
+        padding-left: 25%;
+     }
+
+     .buttons {
+        left: 38%;
+        top: 80%;
      }
 
     .image_container {
