--- a/topseat/templates/Viajes/IniciarViaje.html
+++ b/topseat/templates/Viajes/IniciarViaje.html
@@ -88,7 +88,7 @@
 	<p></p>
 	<form action="{%url 'Viajes:IniciarViaje'%}" method="post" style="text-align:center;">
 		{% csrf_token %}
-		<input type="hidden" name="id" value="{{item.id }}">
+		<input type="hidden" name="id" value="{{viaje.id }}">
 		<input type="submit" value="Iniciar Viaje" class="btn btn-primary">
 	</form>
 	<p></p>
