--- a/topseat/templates/Viajes/conductor.html
+++ b/topseat/templates/Viajes/conductor.html
@@ -51,8 +51,7 @@ for (i = 0; i < close.length; i++) {
 	<td style="text-align:center;">
 		<form action="{%url 'Viajes:Viajes_home'%}" method="post">
 			{% csrf_token %}
-			<input type="hidden" name="origen" value="{{item.ruta.inicio }}">
-			<input type="hidden" name="fin" value="{{item.ruta.fin }}">
+			<input type="hidden" name="id" value="{{item.id}}">
 			<input type="submit" value="Ver Mapa" class="btn btn-primary">
 		</form>
 		<p></p>
@@ -98,6 +97,7 @@ for (i = 0; i < close.length; i++) {
 	<th>Fecha</th>
     <th>Pasajero</th> 
     <th>Cupos</th>
+	<th>Parada</th>
 	<th>Contacto</th>
 	<th>Accion</th>
   </tr>
@@ -107,6 +107,11 @@ for (i = 0; i < close.length; i++) {
 	<td>{{item.viaje.fecha}}</td>
     <td>{{item.pasajero.usuario.first_name}} {{item.pasajero.usuario.last_name}}</td> 
     <td>{{item.cantidadPuestos}}</td>
+	{%if item.parada%}
+		<td>{{item.parada}}</td>
+	{%else%}
+		<td>--</td>
+	{%endif%}
 	{%if movil%}
 	<td ><a href="https://api.whatsapp.com/send?phone=57{{item.pasajero.celular}}" target="_blank">{{item.pasajero.celular}}</a></td>
 	{%else%}
