--- a/topseat/templates/Viajes/pasajero.html
+++ b/topseat/templates/Viajes/pasajero.html
@@ -58,8 +58,7 @@ for (i = 0; i < close.length; i++) {
 		<td style="text-align:center;">
 		<form action="{%url 'Viajes:Viajes_home'%}" method="post">
 			{% csrf_token %}
-			<input type="hidden" name="origen" value="{{item.ruta.inicio }}">
-			<input type="hidden" name="fin" value="{{item.ruta.fin }}">
+			<input type="hidden" name="id" value="{{item.id}}">
 			<input type="submit" value="Ver Mapa" class="btn btn-primary">
 		</form>
 	</td>
@@ -80,6 +79,7 @@ for (i = 0; i < close.length; i++) {
 	<th>Fecha</th>
     <th>Conductor</th> 
     <th>Cupos</th>
+	<th>Parada</th>
 	<th>Contacto</th>
 	<th>Accion</th>
   </tr>
@@ -89,6 +89,11 @@ for (i = 0; i < close.length; i++) {
 	<td>{{item.viaje.fecha}}</td>
     <td>{{item.viaje.conductor.usuario.first_name}} {{item.viaje.conductor.usuario.last_name}}</td> 
     <td>{{item.cantidadPuestos}}</td>
+	{%if item.parada%}
+		<td>{{item.parada}}</td>
+	{%else%}
+		<td>--</td>
+	{%endif%}
 	{%if movil%}
 		<td><a href="https://api.whatsapp.com/send?phone=57{{item.viaje.conductor.celular}}" target="_blank">{{item.viaje.conductor.celular}}</a></td>
 	{%else%}
