--- a/topseat/templates/Viajes/ViajeEnCurso.html
+++ b/topseat/templates/Viajes/ViajeEnCurso.html
@@ -22,8 +22,24 @@
           zoom: 13.25,
           center: {lat: 4.6281098, lng: -74.076144}
         });
+		var trafficLayer = new google.maps.TrafficLayer();
+        trafficLayer.setMap(map);
         directionsRenderer.setMap(map);
-		calculateAndDisplayRoute(directionsService, directionsRenderer);
+		wp=[];
+		var paradasJ = (("{{paradas}}").replace(/&(l|g|quo)t;/g, function(a,b){
+                return {
+                    l   : '<',
+                    g   : '>',
+                    quo : '"'
+                }[b];
+            }));
+		
+		myData = JSON.parse( paradasJ );
+		
+		myData.forEach(function (item,index){
+			wp.push({location:item,stopover:true});
+		});
+		calculateAndDisplayRoute(directionsService, directionsRenderer,wp);
 		infoWindow = new google.maps.InfoWindow;
 
         // Try HTML5 geolocation.
@@ -54,17 +70,18 @@
         infoWindow.open(map);
       }
 
-      function calculateAndDisplayRoute(directionsService, directionsRenderer) {
+      function calculateAndDisplayRoute(directionsService, directionsRenderer,wp) {
         directionsService.route(
             {
               origin: {query: document.getElementById('start').value},
               destination: {query: document.getElementById('end').value},
-			  waypoints: [
-				{
-				  location: 'Salitre Magico',
-				  stopover: true
-				}],
+			  waypoints: wp
               travelMode: 'DRIVING'
+			  drivingOptions: {
+				departureTime: new Date(Date.now()+300000),
+				trafficModel: 'pessimistic'
+			  },
+			  unitSystem: google.maps.UnitSystem.METRIC
             },
             function(response, status) {
               if (status === 'OK') {
