--- a/topseat/templates/Viajes/ViajeEnCurso.html
+++ b/topseat/templates/Viajes/ViajeEnCurso.html
@@ -14,8 +14,7 @@
 
     <div id="map"></div>
     <script>
-	var infoWindow;
-	function initMap() {
+      function initMap() {
         var directionsService = new google.maps.DirectionsService();
         var directionsRenderer = new google.maps.DirectionsRenderer();
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -33,41 +32,13 @@
                     quo : '"'
                 }[b];
             }));
-		
+
 		myData = JSON.parse( paradasJ );
 		
 		myData.forEach(function (item,index){
 			wp.push({location:item,stopover:true});
 		});
 		calculateAndDisplayRoute(directionsService, directionsRenderer,wp);
-		infoWindow = new google.maps.InfoWindow;
-
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }
-	  function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
       }
 
       function calculateAndDisplayRoute(directionsService, directionsRenderer,wp) {
@@ -75,8 +46,8 @@
             {
               origin: {query: document.getElementById('start').value},
               destination: {query: document.getElementById('end').value},
-			  waypoints: wp
-              travelMode: 'DRIVING'
+			  waypoints: wp,
+              travelMode: 'DRIVING',
 			  drivingOptions: {
 				departureTime: new Date(Date.now()+300000),
 				trafficModel: 'pessimistic'
@@ -91,9 +62,6 @@
               }
             });
       }
-	  
-
-
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvljkx6Npy1ByLOU3nMIN58HRY408pR34&callback=initMap">
