--- a/topseat/templates/Viajes/confirmarReserva.html
+++ b/topseat/templates/Viajes/confirmarReserva.html
@@ -59,7 +59,10 @@ for (i = 0; i < close.length; i++) {
 		myData.forEach(function (item,index){
 			wp.push({location:item,stopover:true});
 		});
+		
+		
 		calculateAndDisplayRoute(directionsService, directionsRenderer,wp);
+		
       }
 
       function calculateAndDisplayRoute(directionsService, directionsRenderer,wp) {
@@ -68,9 +71,10 @@ for (i = 0; i < close.length; i++) {
               origin: {query: document.getElementById('start').value},
               destination: {query: document.getElementById('end').value},
 			  waypoints: wp,
-              travelMode: 'DRIVING'
+			  optimizeWaypoints: true,
+              travelMode: 'DRIVING',
 			  drivingOptions: {
-				departureTime: new Date(Date.now()+300000),
+				departureTime: new Date(),
 				trafficModel: 'pessimistic'
 			  },
 			  unitSystem: google.maps.UnitSystem.METRIC
