--- a/topseat/templates/baseApp.html
+++ b/topseat/templates/baseApp.html
@@ -44,8 +44,12 @@
 		  </div>
 		</li>
 		<li class="dropdown">
-		  <a href="javascript:void(0)" class="dropbtn">Bienvenido, {{rol}} {{usuario}}</a>
-		  <div class="dropdown-content">
+		  <a href="javascript:void(0)" class="dropbtn">
+			Bienvenido, {{rol}} {{usuario}}
+			{%if img%}
+				<img class="circular--square" src="../../../{{img.url}}" style="width:40px;height:40px;">
+			{%endif%}</a>
+		  <div class="dropdown-content">	
 			<form action="{%url 'AdmonCuentas:editar_perfil'%}" method="get">{% csrf_token %} 
 			<a href="javascript:;" onclick="parentNode.submit();">Editar Perfil</a> 
 			<input type="hidden" name="changeR" value="Cambiar Rol" /></form>
@@ -55,6 +59,9 @@
 			{%if rol == 'Conductor'%}
 			<form action="{%url 'AdmonCuentas:registro_vehiculo'%}" method="get">{% csrf_token %} 
 			<a href="javascript:;" onclick="parentNode.submit();">Registrar Vehiculo</a> 
+			<input type="hidden" name="changeR" value="Cambiar Rol" /></form>
+			<form action="{%url 'AdmonCuentas:eliminarVehiculo'%}" method="get">{% csrf_token %} 
+			<a href="javascript:;" onclick="parentNode.submit();">Eliminar Vehiculo</a> 
 			<input type="hidden" name="changeR" value="Cambiar Rol" /></form>
 			{%endif%}
 			<form action="{%url 'AdmonCuentas:ReporteViajes' %}" method="get">{% csrf_token %} 
